// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Shloud render with Custom tooltip element inside 1`] = `
<button
  className="sc-bdVaJa cnVwij"
>
  <span>
    Saiba mais
  </span>
  <span
    className="sc-htpNat AtctT sc-bwzfXH dlWQTx"
    type="default"
  >
    <p>
      This is a custom tooltip
    </p>
  </span>
</button>
`;

exports[`Tooltip Shloud render with accessibility text 1`] = `
<button
  className="sc-bdVaJa cnVwij"
>
  <span>
    Saiba mais
  </span>
</button>
`;

exports[`Tooltip should render a tooltip 1`] = `
<button
  className="sc-bdVaJa cnVwij"
/>
`;
